After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684340 - app menu does nothing if the application is not responding
app menu does nothing if the application is not responding
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2012-09-19 01:59 UTC by William Jon McCann
Modified: 2012-12-25 17:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
MetaWindow: add a public method for checking if the application is responding (2.40 KB, patch)
2012-12-24 17:31 UTC, Giovanni Campagna
committed Details | Review
Check that the application is responding when activating a window (1.28 KB, patch)
2012-12-24 17:31 UTC, Giovanni Campagna
committed Details | Review
Ping the active window when using the app menu (1.18 KB, patch)
2012-12-24 17:32 UTC, Giovanni Campagna
committed Details | Review

Description William Jon McCann 2012-09-19 01:59:34 UTC
The app menu does nothing if the application is not responding. This means it is hard to even quit the application.

I guess at minimum we should be showing the not responding dialog thing or a Force Quit menu item or something.
Comment 1 Giovanni Campagna 2012-12-24 17:31:43 UTC
Created attachment 232200 [details] [review]
MetaWindow: add a public method for checking if the application is responding

Add meta_window_check_alive(), which is a simple wrapper over
meta_display_ping_window(), and takes care of showing the "Application
is not responding dialog" if needed.
Comment 2 Giovanni Campagna 2012-12-24 17:31:51 UTC
Created attachment 232201 [details] [review]
Check that the application is responding when activating a window

Currently, we ping windows only when attempting to delete them, but
if the application is not responding, we want to show the dialog
as soon as possible. Given that we cannot be passively notified that
the window stopped responding with the current X11 protocol, a good
workaround is to ping the window when activating it.
If the window stops responding while active, it is expected the user
will try to switch window or open the overview, and when coming back
he'll get the failure dialog.
Comment 3 Giovanni Campagna 2012-12-24 17:32:03 UTC
Created attachment 232202 [details] [review]
Ping the active window when using the app menu

Use the new meta_window_check_alive() to verify if the application is
responding after the user activates an action from the app menu.
This in particular restores the ability to force quit applications
from the menu, even if the use a custom GMenu.
Comment 4 drago01 2012-12-25 16:49:10 UTC
Review of attachment 232200 [details] [review]:

Code looks good, I am not sure the name "check_alive" makes sense ... but can't really think of something better.
Comment 5 drago01 2012-12-25 16:49:40 UTC
Review of attachment 232201 [details] [review]:

Makes sense.
Comment 6 drago01 2012-12-25 16:50:41 UTC
Review of attachment 232202 [details] [review]:

LG.
Comment 7 Giovanni Campagna 2012-12-25 17:44:46 UTC
Attachment 232200 [details] pushed as 57ff0f7 - MetaWindow: add a public method for checking if the application is responding
Attachment 232201 [details] pushed as 6431abb - Check that the application is responding when activating a window
Comment 8 Giovanni Campagna 2012-12-25 17:45:38 UTC
Attachment 232202 [details] pushed as ebd1bc8 - Ping the active window when using the app menu

Thank you for the review, and Happy Holidays! :)