src/core/delete.c
@@ -134,6 +134,18 @@ delete_ping_timeout_func (MetaDisplay *display,
 }
 
 void
+meta_window_check_alive (MetaWindow *window,
+                         guint32     timestamp)
+{
+  meta_display_ping_window (window->display,
+                            window,
+                            timestamp,
+                            delete_ping_reply_func,
+                            delete_ping_timeout_func,
+                            window);
+}
+
+void
 meta_window_delete (MetaWindow  *window,
                     guint32      timestamp)
 {
@@ -156,13 +168,8 @@ meta_window_delete (MetaWindow  *window,
     }
   meta_error_trap_pop (window->display);
 
-  meta_display_ping_window (window->display,
-                            window,
-                            timestamp,
-                            delete_ping_reply_func,
-                            delete_ping_timeout_func,
-                            window);
-  
+  meta_window_check_alive (window, timestamp);
+
   if (window->has_focus)
     {
       /* FIXME Clean this up someday 
