src/meta/window.h
@@ -190,6 +190,9 @@ void        meta_window_kill               (MetaWindow  *window);
 void        meta_window_focus              (MetaWindow  *window,
                                             guint32      timestamp);
 
+void        meta_window_check_alive        (MetaWindow  *window,
+                                            guint32      timestamp);
+
 void meta_window_begin_grab_op (MetaWindow *window,
                                 MetaGrabOp  op,
                                 gboolean    frame_action,
